--- a/src/components/Meals/MealItem/MealItem.module.css
+++ b/src/components/Meals/MealItem/MealItem.module.css
@@ -4,6 +4,7 @@
     margin: 1rem;
     padding-bottom: 1rem;
     border-bottom: 1px solid #ccc;
+    flex-direction: column;
   }
   
   .meal h3 {
